--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -15,8 +15,8 @@
 		<div>
 			 <ul id="navbar">
 				 <li><a href="courses.html">Courses</a></li>
-				 <li><a href="#">Calendar</a></li>
-				 <li><a href="#">MyAccount</a></li>
+				 <li><a href="calendar.html">Calendar</a></li>
+				 <li><a href="myaccount.html">MyAccount</a></li>
 				 <li><a href="contact.html" class="active" >Contact</a></li>
 				 <a href="#" id="close"><i class="far fa-times"></i></a>
 			 </ul>
@@ -175,6 +175,7 @@
 	</script>
 	<script src="main.js"></script>
 </body>
+
 
 
 </html>
