--- a/Frontend/courses.html
+++ b/Frontend/courses.html
@@ -17,7 +17,7 @@
 			<ul id="navbar">
 				<li><a class="active"  href="courses.html">Courses</a></li>
 				<li><a  href="#">Calendar</a></li>
-				<li><a href="#">MyAccount</a></li>
+				<li><a href="login.html">MyAccount</a></li>
 				<li><a href="contact.html">Contact</a></li>
 				<a href="#" id="close"><i class="far fa-times"></i></a>
 			</ul>
